--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,4 @@
-sources:
+removed_sources:
   cmake-2.8.10.2.tar.gz: 2d868ccc3f9f2aa7c2844bd0a4609d5313edaaec
+sources:
+  cmake-2.8.11.2.tar.gz: 31f217c9305add433e77eff49a6eac0047b9e929
