--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
 sources:
   cmake-3.1.0.tar.gz: cc20c40f5480c83a0204f516a490b470bd3a963a
+  cmake-3.1.2.tar.gz: 66c7b73d460daf2e26dc17da1d7e7dfd14bc48fc
