--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  cmake-3.2.3.tar.gz: fa176cc5b1ccf2e98196b50908432d0268323501
+  cmake-3.3.0-rc2.tar.gz: 8b9d7d551b31c7019fd91be8c3868046b6cf5b47
