--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  cmake-3.3.0-rc4.tar.gz: 8ec786965c7b6a17a6d947a329a44a7ae95d75b6
+  cmake-3.3.0.tar.gz: 7ffe0c67c25ee11d74cf7ab8022645151a0d72d2
